--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ output:
 <img src="./IMG_7539.jpg" width="80%" class="left">
 </div>
 
-<div style= "float:left; position : relative; top: 0px; width : 500px; height : 500px; text-align: justify; text-justify: inter-word;">
+<div style= "position: relative; top: 0px; width : auto; height : 500px; text-align: justify; text-justify: inter-word;">
 
 <font size= 3px>
 **He Jin**  
