Update type error

--- a/about.Rmd
+++ b/about.Rmd
@@ -10,7 +10,7 @@ output:
 Major: Biostatisitcs (Theory & Methods track); GPA: 3.75/4.0  
 
 **Bachelor of Science, Shanghai Jiao Tong University (SJTU), Shanghai, China, 2017**  
-Major: Pharmacy, Minor: Musicology; GPA: 3.52/4.0  
+Major: Pharmacy, Minor: Musicology; GPA: 3.5/4.0  
   
   
 ## Professional Experience 
@@ -20,8 +20,8 @@ Major: Pharmacy, Minor: Musicology; GPA: 3.52/4.0
 * Utilized descriptive statistics and statistical models in analyzing survey and CMS (Medicaid & Medicare) data using SAS & STATA
 * Streamlined and improved performance and accuracy of questionnaire using factor analysis(EFA, CFA) and IRT (Item Response Theory) model
 * Summarized exhibits, tables and figures in Excel using Pivot Tables and prepared the final paper for review
-* Recognized for formatting 20+ research papers in alignment with APA, AMA and Chicago Manual of Style guidelines 
 * Served as a main contributor in drafting protocols for data collection and data processing methods and collaborated with other researchers on data management, statistical analysis plan (SAP) and manuscript preparation  
+* Recognized for formatting 40+ research papers in alignment with APA, AMA and Chicago Manual of Style guidelines
   
 **Modeling Analyst Intern, BroadRiver Asset Management, L.P., New York, NY**  
 
@@ -30,6 +30,7 @@ Major: Pharmacy, Minor: Musicology; GPA: 3.52/4.0
 * Managed and optimized large-scale life settlement dataset to track client outcomes and build portfolio efficiently
 * Manipulated and analyzed third-party underwriting data to facilitate strategic decision and save cost for the firm  
 * Skillfully performed survival modeling to identify differences between clients’ self-reported and actual health status  
+* Precisely completed comprehensive financial modeling to generate business insights using V-Lookup in Excel
   
 **Assistant Analyst, IlluminHealth, The Illuminera Group, Shanghai, China**  
   
